Amend previous: complete move from css to scss

--- a/flashcards/angular.json
+++ b/flashcards/angular.json
@@ -123,5 +123,10 @@
       }
     }
   },
-  "defaultProject": "flashcards"
+  "defaultProject": "flashcards",
+  "schematics": {
+    "@schematics/angular:component": {
+      "styleext": "scss"
+    }
+  }
 }
